# beluga-manual

./: .env.development  .env.production  .gitignore  Dockerfile.api  Dockerfile.deepclaude  Dockerfile.nextjs  Dockerfile.rust  README.md  artillery.yml  docker-compose.staging.yml  docker-compose.yml  jest.config.integration.js  jest.config.js  package.json  tsconfig.json
.github/workflows/: ci.yml
alertmanager/: alertmanager.yml
api/src/: routes.ts  server.ts
config/: production.yml
cypress/e2e/: main_flow.cy.js
deepclaude/: Cargo.toml  Dockerfile  config.toml
deepclaude/src/: main.rs
docs/: adding-research-modes.md  animations-and-micro-interactions.md  bug_tracking.md  deployment-guide.md  incident_response_plan.md  production_deployment_checklist.md  quick-reference-guide.md  scaling-and-security.md  testing-procedures.md  uat-feedback-form.md  uat-findings-tracker.md  uat_findings.md  uat_plan.md  uat_scenarios.md  ui-components.md  user-acceptance-testing-guide.md  user_manual.md  video-tutorials.md
grafana/dashboards/: beluga_dashboard.json
prometheus/: alert_rules.yml  prometheus.yml
public/: uat_survey.html
public/api-docs/: error-codes-and-troubleshooting.md  index.html
scripts/: run-load-test.js  test-deepclaude.ts
src/: deepclaude.ts  routes.ts  server.ts
src/__tests__/: api.test.ts  deepclaude.test.ts
src/api-docs/: deepclaude-api-swagger.yaml  main-api-swagger.yaml
src/app/: globals.css  page.tsx
src/components/: ApiManagement.tsx  ApiSourceManager.tsx  DeepResearchToggle.tsx  ResearchModeSelector.tsx  SlideActivityPanel.tsx
(+23 files in other folders)
