[package]
name = "deepclaude"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
axum = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.4", features = ["trace"] }
utoipa = { version = "3.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "3.0", features = ["axum"] }
thiserror = "1.0"
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json"] }

